--- a/login.html
+++ b/login.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Регистрация</title>
+    <title>Вход</title>
     <script src="https://www.gstatic.com/firebasejs/9.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.3.0/firebase-auth.js"></script>
-    <script src="script.js"></script>
+    <script src="login.js"></script>
 </head>
 <body>
-    <h1>Регистрация</h1>
-    <form id="registrationForm">
+    <h1>Вход</h1>
+    <form id="loginForm">
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email" required><br>
         <label for="password">Пароль:</label><br>
         <input type="password" id="password" name="password" required><br><br>
-        <input type="submit" value="Зарегистрироваться">
+        <input type="submit" value="Войти">
     </form>
     <div id="response"></div>
 </body>
