--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Кликер на монету</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+    <div class="container">
+        <h1>Кликер на монету</h1>
+        <img id="coin" src="coin.png" alt="Монета" />
+        <div id="counter">Количество кликов: 0</div>
+        <div id="income">Пассивный доход: 0</div>
+        <button id="sendButton">Отправить в Telegram</button>
+        <h2>Прокачка</h2>
+        <button id="upgradeButton">Улучшить (100 кликов)</button>
+        <div id="upgradeStatus">Улучшений: 0</div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
